  hits 6 updated fields
  (Olivier Nicole, review by Thomas Braibant and Pierre Chambart)

- PR#7023, GPR#336: Better unboxing strategy
  (Alain Frisch, Pierre Chambart)

- GPR#580: Optimize immutable float records
  (Pierre Chambart, review by Mark Shinwell)

- GPR#602: Do not generate dummy code to force module linking
  (Pierre Chambart, reviewed by Jacques Garrigue)

- GPR#703: Optimize some constant string operations when the "-safe-string"
  configure time option is enabled.
  (Pierre Chambart)

- GPR#707: Load cross module information during a meet
  (Pierre Chambart, report by Leo White, review by Mark Shinwell)

- GPR#709: Share a few more equal switch branches
  (Pierre Chambart, review by Gabriel Scherer)

- GPR#712: Small improvements to type-based optimizations for array
  and lazy
  (Alain Frisch, review by Pierre Chambart)

- GPR#714: Prevent warning 59 from triggering on Lazy of constants
  (Pierre Chambart, review by Leo White)

- GPR#723 Sort emitted functions according to source location
  (Pierre Chambart, review by Mark Shinwell)

### Runtime system:

- PR#7210, GPR#562: Allows to register finalisation function that are
  called only when a value will never be reachable anymore. The
  drawbacks compared to the existing one is that the finalisation
  function is not called with the value as argument. These finalisers
  are registered with `GC.finalise_last`
  (François Bobot reviewed by Damien Doligez and Leo White)

- GPR#590: Do not perform compaction if the real overhead is less than expected
  (Thomas Braibant)

### Tools:

- MPR#7323, GPR#750: ensure "ocamllex -ml" works with -safe-string
  (Hongbo Zhang)

- MPR#7189: toplevel #show, follow chains of module aliases
  (Gabriel Scherer, report by Daniel Bünzli, review by Thomas Refis)

- MPR#7248: have ocamldep interpret -open arguments in left-to-right order
  (Gabriel Scherer, report by Anton Bachin)

- GPR#452: Make the output of ocamldep more stable
  (Alain Frisch)
